// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleConnect Mounts correctly with user creds and fires call to delete creds on click 1`] = `
<GoogleConnect
  userCreds={0}
>
  <div
    className="google-connect-parameter"
  >
    <button
      className="disconnect"
      onClick={[Function]}
    >
      Disconnect account
    </button>
  </div>
</GoogleConnect>
`;

exports[`GoogleConnect Mounts correctly without user creds 1`] = `
<GoogleConnect
  userCreds={null}
>
  <div
    className="google-connect-parameter"
  >
    <button
      className="connect"
      onClick={[Function]}
    >
      Connect account
    </button>
  </div>
</GoogleConnect>
`;
